--- a/javascript Dom/index.html
+++ b/javascript Dom/index.html
@@ -14,6 +14,8 @@
 
 <script>
     //select paragraph tag using id
-    console.log (document.getElementById("one"));
+   var para= (document.getElementById("one"));
+   console.log(para.textContent)
+   para.textContent="bye"
 
 </script>
