add script master

--- a/new.html
+++ b/new.html
@@ -12,7 +12,7 @@
 </html>
 <script>
     // Selecting h1 tag
-    var h1 = document.getElementById("hello-world");
+    var h1 = document.getElementById("h1");
     console.log(h1.textContent);
     h1.textContent = "bye world";
 </script>
