--- a/new1.html
+++ b/new1.html
@@ -6,26 +6,28 @@
     <title>Document</title>
 </head>
 <body>
-    <input id ="num1" value ="3">
-    <input id ="num2" value ="9">
-    <button>Add</button>
+    <input id="num1" value="3">
+    <input id="num2" value="9">
+    <button onclick="resultfunction()">Add</button>
     <p id="result">Result</p>
 </body>
 </html>
 <script>
-  //selecting input box 1
-  //selecting input box 2
-  var box1=document.getElementById("num1")
-  var box2=document.getElementById("num2")
-  //selecting result
-var result = document.getElementById("result")
-var box1value=Number(box1.value)
-var box2value=Number(box2.value)
+  // Selecting input box 1
+  var box1 = document.getElementById("num1");
+  // Selecting input box 2
+  var box2 = document.getElementById("num2");
+  // Selecting result
+  var result = document.getElementById("result");
 
-var total = box1value+box2value
-console.log(total)
+  function resultfunction() {
+      // Getting the current values of the input boxes and converting to numbers
+      var box1value = Number(box1.value);
+      var box2value = Number(box2.value);
+      // Calculating the total
+      var total = box1value + box2value;
+      // Displaying the result
+      result.textContent = total;
+      console.log(total);
+  }
 </script>
-
-
-
-
