add script master

--- a/new1.html
+++ b/new1.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <input id="num1" value="3">
-    <input id="num2" value="9">
+    <input id="num1">
+    <input id="num2">
     <button onclick="resultfunction()">Add</button>
     <p id="result">Result</p>
 </body>
