--- a/guesss the num Proj.html
+++ b/guesss the num Proj.html
@@ -8,25 +8,24 @@
 <body>
     <h1>Guess the number</h1>
     <input id="Guessnumber">
-    <button>check</button>
-    <pid="result"> you are Wrong/Right</p>
+    <button onclick="check()">Check</button>
+    <p id="result">You are Wrong/Right</p>
 </body>
 </html>
 <script>
-//selecting input box
-var Guessnumber=document.getElementById("Guessnumber")
-var result=document.getElementById("result")
-var randomNumber = math.floor(math.random()*10)+1
+  // Selecting input box
+  var Guessnumber = document.getElementById("Guessnumber");
+  var result = document.getElementById("result");
+  var randomNumber = Math.floor(Math.random() * 10) + 1;
 
-function check()
-{
-    var userGuess = Guessnumber.value
- if (randomNumber==enterednumber)
- {
-  console.log("Right")
- }
- else{
-    console.log("Wrong")
- }
-}
+  function check() {
+      var userGuess = Number(Guessnumber.value);
+      if (randomNumber === userGuess) {
+          result.textContent = "You are Right";
+          console.log("Right");
+      } else {
+          result.textContent = "You are Wrong";
+          console.log("Wrong");
+      }
+  }
 </script>
