add script master

--- a/guesss the num Proj.html
+++ b/guesss the num Proj.html
@@ -23,6 +23,7 @@
       if (randomNumber === userGuess) {
           result.textContent = "You are Right";
           console.log("Right");
+          alert("you won..")
       } else {
           result.textContent = "You are Wrong";
           console.log("Wrong");
