add script master

--- a/guesss the num Proj.html
+++ b/guesss the num Proj.html
@@ -10,21 +10,27 @@
     <input id="Guessnumber">
     <button onclick="check()">Check</button>
     <p id="result">You are Wrong/Right</p>
+    <p id="score">Score: 10</p>
 </body>
 </html>
 <script>
-  // Selecting input box
+  // Selecting input box and result elements
   var Guessnumber = document.getElementById("Guessnumber");
   var result = document.getElementById("result");
+  var scoreElement = document.getElementById("score");
+  
   var randomNumber = Math.floor(Math.random() * 10) + 1;
+  var score = 10;
 
   function check() {
       var userGuess = Number(Guessnumber.value);
       if (randomNumber === userGuess) {
           result.textContent = "You are Right";
           console.log("Right");
-          alert("you won..")
+          alert("You won!");
       } else {
+          score -= 1;
+          scoreElement.textContent = "Score: " + score;
           result.textContent = "You are Wrong";
           console.log("Wrong");
       }
