--- a/guesss the num Proj.html
+++ b/guesss the num Proj.html
@@ -36,3 +36,63 @@
       }
   }
 </script>
+
+<style>
+    body {
+    font-family: Arial, sans-serif;
+    background: linear-gradient(to right, #00c6ff, #0072ff);
+    color: #fff;
+    text-align: center;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
+h1 {
+    font-size: 3em;
+    margin-bottom: 20px;
+}
+
+input#Guessnumber {
+    font-size: 1.2em;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+button {
+    font-size: 1.2em;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: #fff;
+    color: #0072ff;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+button:hover {
+    background-color: #0072ff;
+    color: #fff;
+}
+
+p#result, p#score {
+    font-size: 1.5em;
+    margin-top: 20px;
+}
+
+p#result {
+    font-weight: bold;
+}
+
+p#score {
+    margin-top: 10px;
+}
+
+</style>
