add script master

--- a/task2.html
+++ b/task2.html
@@ -8,6 +8,7 @@
 <body>
     <button onclick="update()">Add</button>
     <h1 id="result"></h1>
+
 </body>
 </html>
 
@@ -15,7 +16,8 @@
     // Selecting the h1 element
     var h1 = document.getElementById("result");
     
-    function update() {
+    function update() 
+    {
         //create new element
         var listitem =document.createElement("h1")
         listitem.textContent="Hello saha"
