--- a/task2.html
+++ b/task2.html
@@ -4,11 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: linear-gradient(to right, #ff7e5f, #feb47b);
+            color: #333;
+            text-align: center;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+
+        button {
+            font-size: 1.2em;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            background-color: #fff;
+            color: #ff7e5f;
+            cursor: pointer;
+            transition: background-color 0.3s, color 0.3s;
+            margin-bottom: 20px;
+        }
+
+        button:hover {
+            background-color: #ff7e5f;
+            color: #fff;
+        }
+
+        h1#result {
+            font-size: 2em;
+            color: #fff;
+        }
+
+        h1#result h1 {
+            margin: 10px 0;
+            padding: 10px;
+            background-color: rgba(255, 255, 255, 0.1);
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        h1#result h1:hover {
+            background-color: rgba(255, 255, 255, 0.3);
+        }
+    </style>
 </head>
 <body>
     <button onclick="update()">Add</button>
     <h1 id="result"></h1>
-
 </body>
 </html>
 
@@ -16,11 +63,10 @@
     // Selecting the h1 element
     var h1 = document.getElementById("result");
     
-    function update() 
-    {
-        //create new element
-        var listitem =document.createElement("h1")
-        listitem.textContent="Hello saha"
+    function update() {
+        // Create new element
+        var listitem = document.createElement("h1");
+        listitem.textContent = "Hello saha";
         h1.append(listitem);
     }
 </script>
