--- a/task4.html
+++ b/task4.html
@@ -25,4 +25,41 @@
 
 
 
+<style>
+    body {
+    font-family: Arial, sans-serif;
+    background: linear-gradient(to right, #ff7e5f, #feb47b);
+    color: #333;
+    text-align: center;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
 
+h1#result {
+    font-size: 3em;
+    color: #fff;
+    margin-bottom: 20px;
+}
+
+button {
+    font-size: 1.2em;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: #fff;
+    color: #ff7e5f;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+    margin: 5px;
+}
+
+button:hover {
+    background-color: #ff7e5f;
+    color: #fff;
+}
+
+</style>
