add script master

--- a/todo.html
+++ b/todo.html
@@ -8,10 +8,13 @@
 <body>
     <div>
         <h1>saha</h1>
+        <h1>gokul</h1>
     </div>
 </body>
 </html>
 <script>
     var div = document.querySelector("div")
-    div.prepend("hello") 
-</script>
+    var h1=document.createElwmwnt("h1")
+    h1.textContent="Hello"
+    div.insertAdjacentElement("beforeend",h1)
+</script> 
