--- a/todo1.html
+++ b/todo1.html
@@ -8,10 +8,21 @@
 <body>
     <input>
     <button>add</button>
-    <ul>
+    <ul id="list-containeer">
         <li>Hello
             <button>delete</button>
         </li>
+        
     </ul>
 </body>
 </html>
+<script>
+    //selecting ul
+    var ul = document.getElementById("list-container")
+    function add()
+    {
+      var listitem = document.createElement("li")
+      listitem.textContent="hello"
+      ul.appendChild(listitem)
+    }
+</script>
