--- a/todo1.html
+++ b/todo1.html
@@ -7,22 +7,20 @@
 </head>
 <body>
     <input>
-    <button>add</button>
-    <ul id="list-containeer">
+    <button onclick="add()">add</button>
+    <ul id="list-container">
         <li>Hello
             <button>delete</button>
         </li>
-        
     </ul>
 </body>
 </html>
 <script>
-    //selecting ul
-    var ul = document.getElementById("list-container")
-    function add()
-    {
-      var listitem = document.createElement("li")
-      listitem.textContent="hello"
-      ul.appendChild(listitem)
+    // Selecting ul
+    var ul = document.getElementById("list-container");
+    function add() {
+        var listItem = document.createElement("li");
+        listItem.textContent = "hello";
+        ul.appendChild(listItem);
     }
 </script>
