--- a/todo1.html
+++ b/todo1.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <inputn id="input">
+    <input id="input">
     <button onclick="add()">add</button>
     <ul id="list-container">
         <li>Hello
