add script master

--- a/todo1.html
+++ b/todo1.html
@@ -26,6 +26,7 @@
     }
     function deleteitem()
     {
-        var item = event.target.parentNode;
+        var item = event.target.parentElement.remove
+        ()
     }
 </script>
