--- a/task6.html
+++ b/task6.html
@@ -51,51 +51,127 @@
             </tr>
         </thead>
         <tbody>
-           
+            <!-- Rows will be added dynamically here -->
         </tbody>
     </table>
 
-    <script >
+    <script>
         function saveStudent() {
-    // Get the form values
-    const name = document.getElementById('name').value;
-    const age = document.getElementById('age').value;
-    const gender = document.querySelector('input[name="gender"]:checked').value;
-    const course = document.getElementById('course').value;
-    const email = document.getElementById('email').value;
+            // Get the form values
+            const name = document.getElementById('name').value;
+            const age = document.getElementById('age').value;
+            const gender = document.querySelector('input[name="gender"]:checked').value;
+            const course = document.getElementById('course').value;
+            const email = document.getElementById('email').value;
 
-    // Create a new row
-    const table = document.getElementById('student-table').getElementsByTagName('tbody')[0];
-    const newRow = table.insertRow();
+            // Create a new row
+            const table = document.getElementById('student-table').getElementsByTagName('tbody')[0];
+            const newRow = table.insertRow();
 
-    // Insert cells in the row
-    const nameCell = newRow.insertCell(0);
-    const ageCell = newRow.insertCell(1);
-    const courseCell = newRow.insertCell(2);
-    const genderCell = newRow.insertCell(3);
-    const emailCell = newRow.insertCell(4);
-    const actionCell = newRow.insertCell(5);
+            // Insert cells in the row
+            const nameCell = newRow.insertCell(0);
+            const ageCell = newRow.insertCell(1);
+            const courseCell = newRow.insertCell(2);
+            const genderCell = newRow.insertCell(3);
+            const emailCell = newRow.insertCell(4);
+            const actionCell = newRow.insertCell(5);
 
-    // Fill the cells with the form data
-    nameCell.textContent = name;
-    ageCell.textContent = age;
-    courseCell.textContent = course;
-    genderCell.textContent = gender;
-    emailCell.textContent = email;
+            // Fill the cells with the form data
+            nameCell.textContent = name;
+            ageCell.textContent = age;
+            courseCell.textContent = course;
+            genderCell.textContent = gender;
+            emailCell.textContent = email;
 
-    // Create and append the delete button
-    const deleteButton = document.createElement('button');
-    deleteButton.textContent = 'Delete';
-    deleteButton.className = 'delete-btn';
-    deleteButton.onclick = function() {
-        table.deleteRow(newRow.rowIndex - 1);
-    };
-    actionCell.appendChild(deleteButton);
+            // Create and append the delete button
+            const deleteButton = document.createElement('button');
+            deleteButton.textContent = 'Delete';
+            deleteButton.className = 'delete-btn';
+            deleteButton.onclick = function() {
+                table.deleteRow(newRow.rowIndex - 1);
+            };
+            actionCell.appendChild(deleteButton);
 
-    // Clear the form
-    document.getElementById('student-form').reset();
-}
-
+            // Clear the form
+            document.getElementById('student-form').reset();
+        }
     </script>
 </body>
 </html>
+<style>
+    body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+}
+
+.form-container {
+    background: white;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+    width: 300px;
+}
+
+h1 {
+    text-align: center;
+}
+
+label {
+    display: block;
+    margin-top: 10px;
+}
+
+input, select, button {
+    width: 100%;
+    padding: 10px;
+    margin-top: 5px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+button {
+    background-color: #4CAF50;
+    color: white;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+
+table {
+    width: 80%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+th, td {
+    padding: 10px;
+    border: 1px solid #ddd;
+    text-align: center;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
+.delete-btn {
+    background-color: #f44336;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.delete-btn:hover {
+    background-color: #e53935;
+}
+
+</style>
