--- a/task6.html
+++ b/task6.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Form</title>
-    <link rel="stylesheet" href="styles.css">
+    
 </head>
 <body>
     <div class="form-container">
@@ -30,6 +30,8 @@
                 <option value="JavaScript">JavaScript</option>
                 <option value="Java">Java</option>
                 <option value="C++">C++</option>
+                <option value="html">C++</option>
+                <option value="mongodb">C++</option>
             </select>
 
             <label for="email">E-mail</label>
@@ -101,7 +103,7 @@
 <style>
     body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #acb6f8;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -109,7 +111,7 @@
 }
 
 .form-container {
-    background: white;
+    background: rgb(244, 169, 239);
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
