add script master

--- a/in.html
+++ b/in.html
@@ -16,3 +16,26 @@
     console.log(h1.textContent);
     h1.textContent = "bye world";
 </script>
+<style>
+    body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
+
+h1 {
+    color: #333;
+    font-size: 3em;
+    text-align: center;
+    transition: color 0.3s ease-in-out;
+}
+
+h1:hover {
+    color: #ff6347;
+}
+
+</style>
