--- a/new.html
+++ b/new.html
@@ -20,3 +20,43 @@
         h1.textContent = "Bye World";
     }
 </script>
+<style>
+    body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
+}
+
+h1 {
+    color: #333;
+    font-size: 3em;
+    text-align: center;
+    margin: 20px 0;
+    transition: color 0.3s ease-in-out;
+}
+
+h1:hover {
+    color: #ff6347;
+}
+
+button {
+    padding: 10px 20px;
+    font-size: 1em;
+    color: white;
+    background-color: #4CAF50;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+
+</style>
