--- a/task.html
+++ b/task.html
@@ -50,3 +50,30 @@
     </script>
 </body>
 </html>
+<style>
+    body {
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background: linear-gradient(to right, #ec1b98e6, #0072ff);
+    color: #fff;
+}
+
+input#inputbox {
+    font-size: 1.2em;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+h1#result {
+    font-size: 2em;
+}
+
+</style>
