--- a/task3.html
+++ b/task3.html
@@ -17,3 +17,51 @@
     </script>
 </body>
 </html>
+
+<style>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background-color: #f0f0f0;
+            margin: 0;
+        }
+
+        button {
+            font-size: 1em;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            background-color: #0072ff;
+            color: #fff;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        button:hover {
+            background-color: #005bb5;
+        }
+    </style>
+</head>
+<body>
+    <button id="btn" onclick="update()">Change Color</button>
+    <script>
+        // Select btn
+        var btn = document.getElementById("btn");
+        function update() {
+            btn.style.backgroundColor = "red";
+        }
+    </script>
+</body>
+</html>
+
+</style>
