add script master

--- a/javascript Dom/index.html
+++ b/javascript Dom/index.html
@@ -4,18 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>demo</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background-color: #f4f4f4;
+            margin: 0;
+        }
+
+        p#one {
+            font-size: 2em;
+            color: #333;
+            background-color: #e0e0e0;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: background-color 0.3s, transform 0.3s;
+        }
+
+        p#one:hover {
+            background-color: #d1d1d1;
+            transform: scale(1.05);
+        }
+    </style>
 </head>
 <body>
-   
     <p id="one">hello</p>
-   
+
+    <script>
+        // Select paragraph tag using id
+        var para = document.getElementById("one");
+        console.log(para.textContent);
+        para.textContent = "bye";
+    </script>
 </body>
 </html>
-
-<script>
-    //select paragraph tag using id
-   var para= (document.getElementById("one"));
-   console.log(para.textContent)
-   para.textContent="bye"
-
-</script>
