add script master

--- a/insta.html
+++ b/insta.html
@@ -161,3 +161,11 @@ aside {
 }
 
 </style>
+
+<script>
+    // Example JavaScript - Not much functionality for now
+document.addEventListener('DOMContentLoaded', () => {
+    console.log('Instagram Duplicate Page Loaded');
+});
+
+</script>
