add script master

--- a/insta2.html
+++ b/insta2.html
@@ -63,6 +63,12 @@
 </body>
 </html>
 <script>
+    document.addEventListener('DOMContentLoaded', () => {
+    console.log('Instagram Duplicate Page Loaded');
+});
+
+</script>
+<style>
     body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -176,4 +182,4 @@ aside {
     margin-right: 10px;
 }
 
-</script>
+</style>
