--- a/explore.html
+++ b/explore.html
@@ -33,7 +33,7 @@
 </body>
 </html>
 <style>
-    /* General Styles */
+ /* General Styles */
 
 body {
     font-family: Arial, sans-serif;
@@ -48,21 +48,33 @@ header {
     justify-content: space-between;
     padding: 10px 20px;
     background-color: #ffffff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s;
+}
+
+header:hover {
+    background-color: #f0f0f0;
 }
 
 .logo {
     font-size: 1.8em;
     font-weight: bold;
-    color: #333;
+    color: #ff6f61;
+    transition: color 0.3s;
 }
 
 header input[type="text"] {
     width: 250px;
     padding: 8px;
-    border: 1px solid #ccc;
+    border: 2px solid #0072ff;
     border-radius: 5px;
     font-size: 0.9em;
+    transition: border-color 0.3s;
+}
+
+header input[type="text"]:focus {
+    border-color: #ff6f61;
+    outline: none;
 }
 
 .header-icons {
@@ -74,11 +86,12 @@ header input[type="text"] {
     cursor: pointer;
     font-size: 1em;
     color: #333;
+    transition: color 0.3s, transform 0.3s;
 }
 
 .header-icons span:hover {
     color: #0072ff;
-    transition: color 0.3s;
+    transform: scale(1.1);
 }
 
 main {
@@ -90,9 +103,10 @@ main {
 }
 
 .explore h1 {
-    font-size: 2em;
+    font-size: 2.5em;
     margin-bottom: 20px;
-    color: #333;
+    color: #0072ff;
+    animation: fadeIn 1s ease-in-out;
 }
 
 .explore-grid {
@@ -104,17 +118,41 @@ main {
 
 .post {
     background-color: #ffffff;
-    border: 1px solid #ddd;
+    border: 2px solid #ddd;
     border-radius: 10px;
     overflow: hidden;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.post:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .post-image {
     width: 100%;
     height: auto;
     display: block;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 2px solid #ddd;
+    transition: opacity 0.3s;
+}
+
+.post-image:hover {
+    opacity: 0.8;
+}
+
+/* Animations */
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 /* Responsive Design */
@@ -140,5 +178,6 @@ main {
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     }
 }
+
 
 </style>
