--- a/insta.html
+++ b/insta.html
@@ -47,7 +47,9 @@
 </body>
 </html>
 <style>
-    body {
+   /* General Styles */
+
+body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -60,19 +62,33 @@ header {
     justify-content: space-between;
     padding: 10px 20px;
     background-color: #ffffff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s;
+}
+
+header:hover {
+    background-color: #f0f0f0;
 }
 
 .logo {
-    font-size: 1.5em;
+    font-size: 1.8em;
     font-weight: bold;
+    color: #ff6f61;
+    transition: color 0.3s;
 }
 
 header input[type="text"] {
     width: 200px;
-    padding: 5px;
-    border: 1px solid #ccc;
+    padding: 8px;
+    border: 2px solid #0072ff;
     border-radius: 5px;
+    font-size: 0.9em;
+    transition: border-color 0.3s;
+}
+
+header input[type="text"]:focus {
+    border-color: #ff6f61;
+    outline: none;
 }
 
 .header-icons {
@@ -80,9 +96,19 @@ header input[type="text"] {
     gap: 20px;
 }
 
-header .header-icons span {
+.header-icons span {
     cursor: pointer;
+    font-size: 1em;
+    color: #333;
+    transition: color 0.3s, transform 0.3s;
 }
+
+.header-icons span:hover {
+    color: #0072ff;
+    transform: scale(1.1);
+}
+
+/* Main Content */
 
 main {
     display: flex;
@@ -99,17 +125,24 @@ main {
 
 .post {
     background-color: #ffffff;
-    border: 1px solid #ddd;
+    border: 2px solid #ddd;
     border-radius: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.post:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .post-header {
     display: flex;
     align-items: center;
     padding: 10px;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 2px solid #ddd;
+    background-color: #f9f9f9;
 }
 
 .user-avatar {
@@ -117,18 +150,26 @@ main {
     height: 40px;
     border-radius: 50%;
     margin-right: 10px;
+    transition: transform 0.3s;
+}
+
+.user-avatar:hover {
+    transform: scale(1.1);
 }
 
 .post-image {
     width: 100%;
     height: auto;
+    display: block;
+    border-bottom: 2px solid #ddd;
+    transition: opacity 0.3s;
 }
 
-.post-footer {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
+.post-image:hover {
+    opacity: 0.8;
 }
+
+/* Sidebar */
 
 aside {
     flex: 1;
@@ -136,21 +177,27 @@ aside {
 
 .sidebar {
     background-color: #ffffff;
-    border: 1px solid #ddd;
+    border: 2px solid #ddd;
     border-radius: 10px;
     padding: 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .sidebar h2 {
-    font-size: 1.2em;
-    margin-bottom: 10px;
+    font-size: 1.5em;
+    margin-bottom: 15px;
+    color: #0072ff;
+    transition: color 0.3s;
+}
+
+.sidebar h2:hover {
+    color: #ff6f61;
 }
 
 .suggestion {
     display: flex;
     align-items: center;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 .suggestion img {
@@ -158,14 +205,44 @@ aside {
     height: 40px;
     border-radius: 50%;
     margin-right: 10px;
+    transition: transform 0.3s;
 }
 
-</style>
+.suggestion img:hover {
+    transform: scale(1.1);
+}
 
-<script>
-    // Example JavaScript - Not much functionality for now
-document.addEventListener('DOMContentLoaded', () => {
-    console.log('Instagram Duplicate Page Loaded');
-});
+.suggestion span {
+    color: #333;
+}
+
+/* Responsive Design */
+
+@media (max-width: 768px) {
+    header {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    header input[type="text"] {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    .header-icons {
+        margin-top: 10px;
+        justify-content: flex-start;
+        gap: 15px;
+    }
+
+    .posts {
+        padding: 0;
+    }
+
+    .explore-grid {
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    }
+}
+
 
 </script>
